Fix and consolidate R2 perf tests
RB=462881
R=ssheng,dhoa,zzhu
A=ssheng,dhoa,zzhu